добавил логику привязки стартапа к юзеру, добавил в юзера ссылки на соцсети, небольшие правки
